day10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app-44.222.52.175.nip.io
    secretName: giropops.npio.tls
  rules:
  - host: app-44.222.52.175.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
